# python-kafka-example

./: README.md  consume_messages.py  docker-compose.yml  produce_messages.py  pyproject.toml
kafka_tutorial/: create_topic.py
